# quadkonsole4

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  README  TODO  configure  configure.in  configure.in.in  quadkonsole.ebuild  quadkonsole4.ebuild
.github/workflows/: cmake.yml  codeql-analysis.yml  debian-package.yml
debian/: changelog  control  copyright  rules
desktop/: CMakeLists.txt  qkremote.desktop  qkremote_part.desktop  qkremote_part.rc  qkremote_shell.rc  quadkonsole4.desktop  quadkonsole4ui.rc
doc/: CMakeLists.txt  index.docbook
i18n/: CMakeLists.txt  messages.sh  quadkonsole4.pot  quadkonsole4_cs.po  quadkonsole4_de.po  quadkonsole4_sr.po  quadkonsole4_sr@ijekavian.po  quadkonsole4_sr@ijekavianlatin.po  quadkonsole4_sr@latin.po
po/: Makefile.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  closedialog.cpp  closedialog.h  detach_processes.ui  konsole.cpp  konsole.h  main.cpp  mousemovefilter.cpp  mousemovefilter.h  prefs_base.ui  prefs_shutdown.ui  prefs_views.ui  prefsviews.cpp  prefsviews.h  qkapplication.cpp  qkapplication.h  qkbrowseriface.cpp  qkbrowseriface.h  qkhistory.cpp  qkhistory.h  qkremote.cpp  qkremote.h  qkremote_part.cpp  qkremote_part.h  qkremotemain.cpp  qkremotewidget.ui  qkstack.cpp  qkstack.h  qkurlhandler.cpp  qkurlhandler.h  qkview.cpp  qkview.h  quadkonsole.cpp  quadkonsole.desktop  quadkonsole.h  quadkonsole.lsm  quadkonsole4.desktop  quadkonsole4.kcfg  (+3 more)
